--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,6 @@ classifiers = [
     "Intended Audience :: Developers",
     "Development Status :: 5 - Production/Stable",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
@@ -27,16 +26,13 @@ include = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.9.2,<3.13"
+python = ">=3.10,<3.13"
 # Used for local development
 pycountry = "^22.3.5"
 matplotlib = "^3.3.4"
-nautobot = ">=2.4.2,<3.0.0"
+nautobot = ">=2.4.20,<3.0.0"
 # Numpy is not a direct dependency, but we are assisting Poetry version resolution by providing constraints.
-numpy = [
-    {version = "^1.26", python = ">=3.9"},
-    {version = "<1.25", python = "==3.8"}
-]
+numpy = "^1.26"
 netutils = ">=1.14.1"
 
 [tool.poetry.group.dev.dependencies]
@@ -96,7 +92,7 @@ disable = """,
     too-many-positional-arguments,
     nb-warn-dunder-filter-field,
     nb-no-search-function,
-    nb-no-char-filter-q,
+    nb-no-char-filter-q
 """
 
 [tool.pylint.miscellaneous]
